OpenAiAPI has been connected and works as intended